Snap options ignored for Nurbs surfaces #97401

Closed
opened 2022-04-17 12:19:05 +02:00 by Dmitry · 8 comments

System Information
Operating system: Windows-10-10.0.19043-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 970/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 472.12

Blender Version
Broken: version: 3.1.2, branch: master, commit date: 2022-03-31 17:40, hash: cc66d1020c
Worked: (newest version of Blender that worked as expected)

Short description of error
In edit mode for Nurbs surfaces, only incremental snap option works ignoring whatever option you choose.

Exact steps for others to reproduce the error

  1. Add->Surface->Nurbs Curve (or other Nurbs surface from Surface list)
  2. Switch to Edit mode
  3. Activate snapping for vertices (Snap to Vertex)
  4. Select and move any of control points
  5. Observe that it snaps position in grid incremental manner instead of trying to snap to other control points
    Any snap option behaves like "Snap To: Increment".

Worth to mention that Nurbs Curve from Curves section (Add->Curves->Nurbs Curve) works as expected, so it is definitely an inconsistency in behavior.

It was also reported in 2017 for 2.8 (https://developer.blender.org/T51249), but issue was closed mentioning that it will be done at somepoint in 2.8. It doesn't look like a TODO feature after 5 years :).

**System Information** Operating system: Windows-10-10.0.19043-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 970/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 472.12 **Blender Version** Broken: version: 3.1.2, branch: master, commit date: 2022-03-31 17:40, hash: `cc66d1020c` Worked: (newest version of Blender that worked as expected) **Short description of error** In edit mode for Nurbs surfaces, only incremental snap option works ignoring whatever option you choose. **Exact steps for others to reproduce the error** 1. Add->Surface->Nurbs Curve (or other Nurbs surface from Surface list) 2. Switch to Edit mode 3. Activate snapping for vertices (Snap to Vertex) 4. Select and move any of control points 5. Observe that it snaps position in grid incremental manner instead of trying to snap to other control points Any snap option behaves like "Snap To: Increment". Worth to mention that Nurbs Curve from Curves section (Add->Curves->Nurbs Curve) works as expected, so it is definitely an inconsistency in behavior. It was also reported in 2017 for 2.8 (https://developer.blender.org/T51249), but issue was closed mentioning that it will be done at somepoint in 2.8. It doesn't look like a TODO feature after 5 years :).
Author

Added subscriber: @idldmit

Added subscriber: @idldmit
Member

Added subscribers: @mano-wii, @PratikPB2123

Added subscribers: @mano-wii, @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Needs Developer To Reproduce'

Changed status from 'Needs Triage' to: 'Needs Developer To Reproduce'
Member

Hi, thanks for the report. This is already mentioned in old todo list: #55362 (Blender development todo list -- Tools (migrated from wiki))

Worth to mention that Nurbs Curve from Curves section (Add->Curves->Nurbs Curve) works as expected, so it is definitely an inconsistency in behavior.

Can confirm. @mano-wii , what are your thoughts on this?

Hi, thanks for the report. This is already mentioned in old todo list: #55362 (Blender development todo list -- Tools (migrated from wiki)) > Worth to mention that Nurbs Curve from Curves section (Add->Curves->Nurbs Curve) works as expected, so it is definitely an inconsistency in behavior. Can confirm. @mano-wii , what are your thoughts on this?

Changed status from 'Needs Developer To Reproduce' to: 'Confirmed'

Changed status from 'Needs Developer To Reproduce' to: 'Confirmed'

This is a different problem than described in the ToDo.
I don't see why NURB points are not supported.
Actually the code is there, it's just not reached.

This is a different problem than described in the ToDo. I don't see why NURB points are not supported. Actually the code is there, it's just not reached.

This issue was referenced by 35dc4ba9e2

This issue was referenced by 35dc4ba9e23ac37a22fee49c813aee2a6a2d3e61

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Germano Cavalcante self-assigned this 2022-04-25 17:36:17 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#97401
No description provided.